<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/peace_and_quiet"
    android:scaleType="centerCrop"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sfx_string"
        app:layout_constraintBottom_toTopOf="@+id/Sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:shadowDy="5"
        android:shadowDx="5"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/Sound"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328"
        app:srcCompat="@drawable/ic_action_name" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        app:layout_constraintBottom_toTopOf="@+id/Library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sound"
        app:layout_constraintVertical_bias="0.67" />

    <Button
        android:id="@+id/Library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Library"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sound"
        app:layout_constraintVertical_bias="0.388" />


</androidx.constraintlayout.widget.ConstraintLayout>