<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peace_and_quiet"
    android:scaleType="centerCrop"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#99000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <ImageView
        android:id="@+id/backgroundLogin"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:background="#37b880db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403"></ImageView>

    <TextView
        android:id="@+id/Title_Log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowRadius="5"
        android:shadowDy="5"
        android:shadowDx="5"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundLogin"
        app:layout_constraintEnd_toEndOf="@+id/backgroundLogin"
        app:layout_constraintStart_toStartOf="@+id/backgroundLogin"
        app:layout_constraintTop_toTopOf="@+id/backgroundLogin"
        app:layout_constraintVertical_bias="0.138" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/hint_background"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundLogin"
        app:layout_constraintEnd_toEndOf="@+id/backgroundLogin"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/backgroundLogin"
        app:layout_constraintTop_toTopOf="@+id/backgroundLogin"
        app:shapeAppearanceOverlay="@style/Smoothrect"
        app:strokeColor="#ff426b"
        app:strokeWidth="5dp"></com.google.android.material.imageview.ShapeableImageView>

    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:hint="@string/Display"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/hint_background"
        app:layout_constraintEnd_toEndOf="@+id/hint_background"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/hint_background"
        app:layout_constraintTop_toTopOf="@+id/hint_background"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundLogin"
        app:layout_constraintEnd_toEndOf="@+id/backgroundLogin"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/backgroundLogin"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        app:layout_constraintVertical_bias="0.595" />


</androidx.constraintlayout.widget.ConstraintLayout>